--- a/microposts/client/templates/posts/posts.html
+++ b/microposts/client/templates/posts/posts.html
@@ -11,61 +11,32 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myPostModalLabel">Post Something</h4>
+        <h4 class="modal-title" id="myPostModalLabel">Create a Post</h4>
       </div>
       <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
+        {{#autoForm collection="Posts" id="insertPostForm" type="insert"}}
+        {{> afQuickField name="body" rows=4}}
+        <button type="submit" class="btn btn-primary">Post</button>
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        {{/autoForm}}
       </div>
     </div>
   </div>
 </div>
 <hr/>
+{{#each posts}}
 <div class="row post">
   <div class="col-md-1">
-    <img src="img/profile.jpg"/>
+    <img src="{{getProfileImg userId}}"/>
   </div>
   <div class="col-md-11">
     <small>
-      First post by John at 11/23/2015.
+      {{username}} at {{createdAt}}.
     </small>
-    <p>This is the post.blah blah blah.</p>
+    <p>{{body}}</p>
   </div>
 </div>
-<div class="row post">
-  <div class="col-md-1">
-    <img src="img/profile.jpg"/>
-  </div>
-  <div class="col-md-11">
-    <small>
-      First post by Brad at 11/23/2015.
-    </small>
-    <p>This is the post.blah blah blah.</p>
-  </div>
-</div>
-<div class="row post">
-  <div class="col-md-1">
-    <img src="img/profile.jpg"/>
-  </div>
-  <div class="col-md-11">
-    <small>
-      First post by Jane at 11/23/2015.
-    </small>
-    <p>This is the post.blah blah blah.</p>
-  </div>
-</div>
-<div class="row post">
-  <div class="col-md-1">
-    <img src="img/profile.jpg"/>
-  </div>
-  <div class="col-md-11">
-    <small>
-      First post by Anand at 11/23/2015.
-    </small>
-    <p>This is the post.blah blah blah.</p>
-  </div>
-</div>
-  </template>
+{{else}}
+<p>No posts.</p>
+{{/each}}
+</template>
