--- a/spatit/client/templates/layout.html
+++ b/spatit/client/templates/layout.html
@@ -3,5 +3,15 @@
 </body>
 <template name="layout">
   {{> navbar}}
-  {{> yield}}
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3">
+        {{> sidebar}}
+      </div>
+      <div class="col-md-9">
+        {{> yield}}
+      </div>
+    </div>
+  </div>
+  {{>footer}}
 </template>
