--- a/spatit/client/templates/layout.html
+++ b/spatit/client/templates/layout.html
@@ -9,6 +9,7 @@
         {{> sidebar}}
       </div>
       <div class="col-md-9">
+        {{> flashMessages}}
         {{> yield}}
       </div>
     </div>
