--- a/spatit/client/templates/products/products.html
+++ b/spatit/client/templates/products/products.html
@@ -1,5 +1,19 @@
 <template name="products">
+  <h3>Products</h3>
   {{#each products}}
-  <p>{{name}}</p>
+  <div class="row product-row">
+    <div class="col-md-2">
+      <img src="{{image}}" class="full">
+    </div>
+    <div class="col-md-10">
+      <h4>{{name}}</h4>
+      <p>Average rating: </p>
+      <p>{{description}}</p>
+      <a href="{{pathFor product}}" class="btn btn-default">Read reviews</a>
+        <a href="{{pathFor newReview}}" class="btn btn-primary">Add review</a>
+    </div>
+  </div>
+  {{else}}
+  <p>There are no products found.</p>
   {{/each}}
 </template>
