--- a/spatit/client/templates/add_product/add_product.html
+++ b/spatit/client/templates/add_product/add_product.html
@@ -16,7 +16,7 @@
     </div>
     <div class="form-group">
       <label>Product Image</label>
-      <input type="file" name="productImage" class="form-control" id="productImage"/>
+      <input type="file" name="productImage" id="productImage"/>
     </div>
     <div class="form-group">
       <label>Description</label>
