--- a/spatit/client/templates/home/home.html
+++ b/spatit/client/templates/home/home.html
@@ -8,11 +8,13 @@
     <div class="col-md-10">
       <h4>{{name}}</h4>
       <p>Average rating: <img class="stars" src="/img/{{getAvg reviews}}_stars.png">(
-        {{getReviewsTotal reviews.length}}
+        {{getReviewsTotal reviews}}
         )</p>
       <p>{{description}}</p>
       <a href="{{pathFor product}}" class="btn btn-default">Read reviews</a>
+      {{#if currentUser}}
         <a href="{{pathFor newReview}}" class="btn btn-primary">Add review</a>
+        {{/if}}
     </div>
   </div>
   {{else}}
