--- a/spatit/client/templates/includes/navbar.html
+++ b/spatit/client/templates/includes/navbar.html
@@ -14,7 +14,12 @@
             <ul class="nav navbar-nav">
               <li><a href="/">Home</a></li>
               <li><a href="{{pathFor 'products'}}">Products</a></li>
+              {{#if currentUser}}
               <li><a href="{{pathFor 'add_product'}}">Add Product</a></li>
+              {{/if}}
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+              {{> loginButtons}}
             </ul>
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
