--- a/helpticket/client/templates/partials/navbar.html
+++ b/helpticket/client/templates/partials/navbar.html
@@ -35,14 +35,14 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="{{pathFor 'stafftickets'}}">Home</a></li>
+            <li><a href="{{pathFor 'staff'}}">Home</a></li>
             <li class="dropdown">
-              <a href="/staff/departments" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Manage Tickets <span class="caret"></span></a>
+              <a href="/staff/departments" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Departments <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="/staff/departments">Manage</a></li>
                 <li><a href="/staff/departments/add">Add</a></li>
               </ul>
-            </li>            
+            </li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
