--- a/webplans/client/templates/layouts/sidebar.html
+++ b/webplans/client/templates/layouts/sidebar.html
@@ -1,2 +1,13 @@
 <template name="sidebar">
+  {{> loginButtons}}
+  <br><br>
+  {{#if isInRole 'admin'}}
+  <a class="button button{{#if currentRoute 'listsubscribers'}}-primary{{/if}}" href="/admin/subscribers">View Subscribers</a>
+  <a class="button button{{#if currentRoute 'listplans'}}-primary{{/if}}" href="/admin/plans">View Plans</a>
+  <a class="button button{{#if currentRoute 'addplan'}}-primary{{/if}}" href="/admin/plans/add">Add New Plans</a>
+  {{/if}}
+  <a class="button button{{#if currentRoute 'plans'}}-primary{{/if}}" href="/">View Plans</a>
+  {{#if currentUser}}
+    <a class="button button{{#if currentRoute 'myplans'}}-primary{{/if}}" href="/myplans">My Plans</a>
+  {{/if}}
 </template>
