--- a/codefolio/client/templates/admin/projects/add_project.html
+++ b/codefolio/client/templates/admin/projects/add_project.html
@@ -10,13 +10,11 @@
                     </div>
                      <div class="form-group">
                          <label>Project Date</label>
-                        <!--    <div class="input-group datetimepicker">
+                          <div class="input-group datetimepicker">
                             <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
                             <input class="set-due-date" id="projectDate" name="projectDate" form-control type="text"/>
-                          </div>-->
+                          </div>
                     </div>
-
-
                     <div class="form-group">
                         <label>Client</label>
                         <input type="text" class="form-control" id="client" name="client" placeholder="Client Name">
